fixed rotation sizing issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -352,3 +352,11 @@ html{
   }
 
 }
+
+
+
+@media screen and (max-height: 490px){
+  .menu-btns{
+    left: 52%;
+  }
+}
