--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -56,7 +56,7 @@
 @media screen and (min-width: 768px) {
 
     .content{
-        height: 100vh;
+        /* height: 100vh; */
         background-blend-mode: color;
         /* background-color: rgb(51, 27, 24); */
         /* padding: 4rem 0 2rem 0; */
@@ -121,10 +121,7 @@
         font-size: 3em;
     }
 
-    .conten-logo{
-        /* padding: 10px; */
-    }
-
+  
     .content-text > p {
         font-size: 1.5em;
         font-family: ui-rounded;
@@ -156,3 +153,8 @@
      
 }
 
+@media screen and (max-height: 490px){
+    .content-text{
+        min-height: 100vh;
+    }
+}
